error.txt
hw3\Deep.java:320: error: illegal start of expression
						bufferMaxonMP2.add({z,i,j});
						                   ^
hw3\Deep.java:320: error: ';' expected
						bufferMaxonMP2.add({z,i,j});
						                    ^
hw3\Deep.java:320: error: illegal start of expression
						bufferMaxonMP2.add({z,i,j});
						                     ^
hw3\Deep.java:320: error: ';' expected
						bufferMaxonMP2.add({z,i,j});
						                         ^
hw3\Deep.java:320: error: illegal start of expression
						bufferMaxonMP2.add({z,i,j});
						                          ^
hw3\Deep.java:330: error: <identifier> expected
		bufferFL1 = new Double[numFL];
		         ^
hw3\Deep.java:331: error: illegal start of type
		for(int i = 0; i<bufferFL1.length;i++)
		^
hw3\Deep.java:331: error: ')' expected
		for(int i = 0; i<bufferFL1.length;i++)
		         ^
hw3\Deep.java:331: error: illegal start of type
		for(int i = 0; i<bufferFL1.length;i++)
		            ^
hw3\Deep.java:331: error: <identifier> expected
		for(int i = 0; i<bufferFL1.length;i++)
		             ^
hw3\Deep.java:331: error: ';' expected
		for(int i = 0; i<bufferFL1.length;i++)
		              ^
hw3\Deep.java:331: error: > expected
		for(int i = 0; i<bufferFL1.length;i++)
		                          ^
hw3\Deep.java:331: error: '(' expected
		for(int i = 0; i<bufferFL1.length;i++)
		                                 ^
hw3\Deep.java:331: error: <identifier> expected
		for(int i = 0; i<bufferFL1.length;i++)
		                                   ^
hw3\Deep.java:331: error: illegal start of type
		for(int i = 0; i<bufferFL1.length;i++)
		                                     ^
hw3\Deep.java:331: error: <identifier> expected
		for(int i = 0; i<bufferFL1.length;i++)
		                                      ^
hw3\Deep.java:332: error: ';' expected
		{   sum = 0;
		 ^
hw3\Deep.java:332: error: illegal start of type
		{   sum = 0;
		        ^
hw3\Deep.java:332: error: <identifier> expected
		{   sum = 0;
		         ^
hw3\Deep.java:333: error: illegal start of type
			for(int j = 0; j < numMP2;j++)
			^
hw3\Deep.java:333: error: ')' expected
			for(int j = 0; j < numMP2;j++)
			         ^
hw3\Deep.java:333: error: illegal start of type
			for(int j = 0; j < numMP2;j++)
			            ^
hw3\Deep.java:333: error: <identifier> expected
			for(int j = 0; j < numMP2;j++)
			             ^
hw3\Deep.java:333: error: ';' expected
			for(int j = 0; j < numMP2;j++)
			              ^
hw3\Deep.java:333: error: > expected
			for(int j = 0; j < numMP2;j++)
			                         ^
hw3\Deep.java:333: error: '(' expected
			for(int j = 0; j < numMP2;j++)
			                           ^
hw3\Deep.java:338: error: ']' expected
			bufferFL1[i] = sum;
			          ^
hw3\Deep.java:338: error: ';' expected
			bufferFL1[i] = sum;
			           ^
hw3\Deep.java:338: error: <identifier> expected
			bufferFL1[i] = sum;
			                  ^
hw3\Deep.java:340: error: ']' expected
			bufferFL1[i] -= biasFL[i];
			          ^
hw3\Deep.java:340: error: ';' expected
			bufferFL1[i] -= biasFL[i];
			           ^
hw3\Deep.java:340: error: ']' expected
			bufferFL1[i] -= biasFL[i];
			                       ^
hw3\Deep.java:340: error: ';' expected
			bufferFL1[i] -= biasFL[i];
			                        ^
hw3\Deep.java:343: error: illegal start of type
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			^
hw3\Deep.java:343: error: ']' expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			              ^
hw3\Deep.java:343: error: ')' expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			               ^
hw3\Deep.java:343: error: <identifier> expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                  ^
hw3\Deep.java:343: error: illegal start of type
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                    ^
hw3\Deep.java:343: error: '(' expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                               ^
hw3\Deep.java:343: error: <identifier> expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                                 ^
hw3\Deep.java:343: error: illegal start of type
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                                   ^
hw3\Deep.java:343: error: <identifier> expected
			if (bufferFL1[i] < 0) bufferFL1[i] = 0.0;
			                                    ^
hw3\Deep.java:347: error: class, interface, or enum expected
		bufferFL2 = new Double[numFL2];
		^
hw3\Deep.java:348: error: class, interface, or enum expected
		for(int i = 0; i < bufferFL2.length;i++)
		^
hw3\Deep.java:348: error: class, interface, or enum expected
		for(int i = 0; i < bufferFL2.length;i++)
		               ^
hw3\Deep.java:348: error: class, interface, or enum expected
		for(int i = 0; i < bufferFL2.length;i++)
		                                    ^
hw3\Deep.java:353: error: class, interface, or enum expected
			bufferFL2[i] = sum;
			^
hw3\Deep.java:355: error: class, interface, or enum expected
			bufferFL2[i] -= biasFL2[i];
			^
hw3\Deep.java:358: error: class, interface, or enum expected
			bufferFL2[i] = sigmoid(bufferFL2[i]);
			^
hw3\Deep.java:359: error: class, interface, or enum expected
		}
		^
hw3\Deep.java:362: error: class, interface, or enum expected
		for(int i = 0 ; i < bufferFL2.length; i++)
		^
hw3\Deep.java:362: error: class, interface, or enum expected
		for(int i = 0 ; i < bufferFL2.length; i++)
		                ^
hw3\Deep.java:362: error: class, interface, or enum expected
		for(int i = 0 ; i < bufferFL2.length; i++)
		                                      ^
hw3\Deep.java:365: error: class, interface, or enum expected
		}
		^
hw3\Deep.java:367: error: class, interface, or enum expected
	}
	^
hw3\Deep.java:370: error: class, interface, or enum expected
	public void backProp(Double[][][] TrainSet, Double[][][] TuneSet)
	       ^
hw3\Deep.java:386: error: class, interface, or enum expected
public double sigmoid(double x)
       ^
hw3\Deep.java:389: error: class, interface, or enum expected
}
^
hw3\Deep.java:391: error: class, interface, or enum expected
public double ReLuPrime(double x)
       ^
hw3\Deep.java:394: error: class, interface, or enum expected
}
^
hw3\Deep.java:396: error: class, interface, or enum expected
public double sigmoidPrime(double output)
       ^
hw3\Deep.java:399: error: class, interface, or enum expected
}
^
62 errors
